# AndUEChams

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
misc/com.tencent.tmgp.dfm/: Logs.txt  Offsets.hpp
misc/com.tencent.tmgp.dfm/SDK_A/: Basic.cpp  Basic.h  CoreUObject_classes.hpp  CoreUObject_functions.cpp  CoreUObject_structs.hpp  SDK.hpp  UnrealContainers.h
misc/com.tencent.tmgp.dfm/SDK_A/utfcpp/: core.h  unchecked.h
source/: Library.cpp
source/AndroidPlatform/: ActivityHost.cpp  ActivityHost.h  AndroidPlatform.h  DisplayInfo.cpp  DisplayInfo.h  JniRuntime.cpp  JniRuntime.h  LooperDispatcher.cpp  NativeWindowProvider.cpp  NativeWindowProvider.h
source/Graphics/: IGraphicsBackend.h  OpenGLBackend.cpp  OpenGLBackend.h  SwapChainHook.cpp  SwapChainHook.h  VulkanBackend.cpp  VulkanBackend.h
source/ImGui/: ImGuiHost.cpp  ImGuiHost.h  ImGuiSetup.cpp  ImGuiSetup.h
source/ImGuiExtern/: ImGuiSoftKeyboard.h
source/InputEvent/: InputEventHook.cpp  InputEventHook.h
source/PointerHook/: IPointerHook.cpp  SafePointerHook.h
source/UEGame/: MaterialManager.cpp  MaterialManager.h  OffsetResolver.cpp  Offsets.h  UE_Hack.cpp  UE_Hack.h
source/UEGame/Engine/Base/: BaseEngine.cpp  BaseEngine.h  BaseEnums.h  BaseStructs.h
source/UEGame/Engine/DFM/: DFMEngine.cpp  DFMEngine.h  DFMStructs.h
source/UEGame/UECore/: IGameProfile.h  ProfileRegistry.cpp  ProfileRegistry.h  UECoreInit.cpp  UECoreInit.h  UEMemory.h  UnrealContainers.h
source/UEGame/UECore/Profiles/: ArenaBreakout.h  DeltaForce.h
source/UEGame/UECore/SDK_A/: CoreUObject_classes.hpp  CoreUObject_functions.cpp  CoreUObject_structs.hpp  SDK.hpp
source/Utils/: KittyEx.h  Logger.h
source/Utils/Config/: Config.cpp  Config.h
source/Utils/CrashHandler/: CrashHandler.cpp
source/Utils/ElfScanner/: ElfScannerManager.cpp  ElfScannerManager.h
source/Utils/Resource/: ResourceManager.cpp  ResourceManager.h
